force-app/main/default/objects/Customs_Document__c/Customs_Document__c.object-meta.xml
<CustomObject>
    <description>Junction object between Shipment and Cargo</description>
    <label>Customs Document</label>
    <nameField>
        <label>Customs Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customs Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>