force-app/main/default/objects/Customs_Document__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cargo</label>
    <referenceTo>Cargo_Name__c</referenceTo>
    <relationshipLabel>Customs Documents</relationshipLabel>
    <relationshipName>Customs_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>