force-app/main/default/objects/Customs_Document__c/fields/Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Date__c</fullName>
    <label>Clearance Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>