force-app/main/default/objects/Customs_Document__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment_Number__c</referenceTo>
    <relationshipLabel>Customs Documents</relationshipLabel>
    <relationshipName>Customs_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>